# e7awg_sw

./: .gitignore  FAQ.txt  Pipfile  README.md  pyproject.toml  setup.py  sphinx_build.sh
design_validation/: note.txt
design_validation/awg_sim_data_gen/: README.md  awg_sim_data_gen.py  config.py
design_validation/cap_mod_composition_test/: cap_mod_composition.py  capturetest.py  note.txt
design_validation/capture_path_test/: capture_path_test.py  capturetest.py
design_validation/capture_x8_test/: capture_x8_test.py  capturetest.py  concurrency_test.sh  note.txt
design_validation/capture_x8_test_dsp/: capture_x8_test_dsp.py  capturetestdsp.py  note.txt  (+3 more)
docs/: conf.py  e7awgsw.digitaloutput.rst  e7awgsw.labrad.rst  e7awgsw.rst  e7awgsw.zcu111.rst  index.rst
e7awgsw/: __init__.py  awg_proxy.py  awgctrl.py  awgwave.py  capture_proxy.py  capturectrl.py  captureparam.py  classification.py  common_proxy.py  dspmodule.py  exception.py  hal.py  hwdefs.py  hwdefs_dsp.py  hwparam.py  hwspec.py  lock.py  logger.py  memorymap.py  sequencer.py  sequencercmd.py  sequencerctrl.py  udpaccess.py  uplpacket.py  utiltool.py  wavesequence.py
emulator/: README.md  awg.py  awgcontroller.py  capture.py  capturecontroller.py  dspmodule.py  emulator.py  hbm.py  register.py  upldispatcher.py
manuals/: README.md  feedback.md  sequencer.md  terms.md
qubelib/: __init__.py  awgctrl.py  awgwave.py  capturectrl.py  captureparam.py  hwdefs.py  logger.py  udpaccess.py  utiltool.py  wavesequence.py
test_env/: sphinx_build.sh
tests/: test_uplpacket.py
tests_with_device/: test_hbm.py
(+344 files in other folders)
